clusters/contabo-mkt/tenants/bbb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-ingress
  namespace: tenant-bbb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: bbb.omani.rest
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookstack-x-tenant-bbb-x-vcluster
                port:
                  number: 80
          - path: /bookstack
            pathType: Prefix
            backend:
              service:
                name: bookstack-x-tenant-bbb-x-vcluster
                port:
                  number: 80
          - path: /cal-com
            pathType: Prefix
            backend:
              service:
                name: cal-com-x-tenant-bbb-x-vcluster
                port:
                  number: 80
          - path: /gitea
            pathType: Prefix
            backend:
              service:
                name: gitea-x-tenant-bbb-x-vcluster
                port:
                  number: 80
  tls:
    - hosts:
        - bbb.omani.rest
      secretName: tenant-bbb-tls
